WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283578
AX: REGRESSION(
286869@main
): AXPropertyName::IsExpanded becomes stale for details and summary elements, causing accessibility/mac/details-summary.html to fail in ITM
https://bugs.webkit.org/show_bug.cgi?id=283578
Summary
AX: REGRESSION(286869@main): AXPropertyName::IsExpanded becomes stale for det...
Tyler Wilcock
Reported
2024-11-22 10:38:53 PST
Prior to
https://commits.webkit.org/286869@main
, we used to get away with not updating this property because every time the details were expanded, we would throw away the entire details, summary, and other descendant objects and create new ones (because the DOM implementation destroyed and recreated the DOM elements each time). After
https://commits.webkit.org/286869@main
, the DOM implementation no longer destroys and recreates brand new DOM elements, instead managing the visibility via CSS content-visibility. This a good change, since we now do significantly less work, but need to make sure this property stays up-to-date.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-22 10:39:01 PST
<
rdar://problem/140428627
>
Tyler Wilcock
Comment 2
2024-11-22 10:41:19 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37036
EWS
Comment 3
2024-11-23 07:25:52 PST
Committed
287009@main
(9da9cefb7d6d): <
https://commits.webkit.org/287009@main
> Reviewed commits have been landed. Closing PR #37036 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug