AX: REGRESSION(286869@main): AXPropertyName::IsExpanded becomes stale for details and summary elements, causing accessibility/mac/details-summary.html to fail in ITM https://bugs.webkit.org/show_bug.cgi?id=283578 rdar://140428627

Reviewed by Chris Fleizach.

Prior to https://commits.webkit.org/286869@main, we used to get away with not updating this property because every time
the details were expanded, we would throw away the entire details, summary, and other descendant objects and create new
ones (because the DOM implementation destroyed and recreated the DOM elements each time). After
https://commits.webkit.org/286869@main, the DOM implementation no longer destroys and recreates brand new DOM elements,
instead managing the visibility via CSS content-visibility. This a good change, since we now do significantly less work,
but need to make sure this property stays up-to-date. This commit does that.

* LayoutTests/accessibility/mac/details-summary-expected.txt:
* LayoutTests/accessibility/mac/details-summary.html:
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::onExpandedChanged):
* Source/WebCore/accessibility/AXObjectCache.h:
* Source/WebCore/html/HTMLDetailsElement.cpp:
(WebCore::HTMLDetailsElement::toggleOpen):

Canonical link: https://commits.webkit.org/287009@main